Fix potential overflowing of title

--- a/src/components/Section/Main/MainSounds/MainSound.module.scss
+++ b/src/components/Section/Main/MainSounds/MainSound.module.scss
@@ -229,13 +229,35 @@
   }
 }
 
+.main__info {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 1.5rem;
+}
+
+.main__pfp {
+  min-width: 3.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
+
 .main__text {
+  margin-left: 1.5rem;
+
+  overflow: hidden;
+
   h2 {
     color: var(--color-nav-active);
     font-size: 1.6rem;
     font-weight: 500;
   }
-  margin-top: 1.5rem;
 
   p {
     margin-top: 0.5rem;
